infra/anvilops-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anvilops
  namespace: anvilops-dev
spec:
  selector:
    matchLabels:
      app: anvilops
  template:
    metadata:
      labels:
        app: anvilops
    spec:
      containers:
        - name: anvilops
          image: registry.anvil.rcac.purdue.edu/anvilops/anvilops:main-53-cda9929247ebe419916854d2a30b115df9aa6353 # {"$imagepolicy": "anvilops-dev:anvilops-imagepolicy"}
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
