infra/load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: load-balancer
  namespace: anvilops-dev
spec:
  selector:
    app: anvilops
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: LoadBalancer
