infra/notification-receiver.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-receiver
  namespace: anvilops-dev
spec:
  type: LoadBalancer
  selector:
    app: notification-controller
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 9292
